@@ -70,6 +70,10 @@ Recalculate the hashes of the files in this document and write it to a probity l
 
 Cause the web server to reload the repository configuration.
 
+=item B<epadmin> refresh_abstracts I<repository_id>
+
+Tell the webserver that all abstract summary pages must be regenerated. The webserver will update them on demand, but won't update them again unless something on the EPrint changes or you re-run refresh abstracts.
+
 =item B<epadmin> redo_thumbnails I<repository_id> 
 
 Regenerate all the thumbnail and image-preview files.
@@ -184,6 +188,7 @@ else
 	elsif( $action eq "erase_eprints" ) { erase_eprints( $repoid ); }
 	elsif( $action eq "erase_fulltext_index" ) { erase_fulltext_index( $repoid ); }
 	elsif( $action eq "reload" ) { reload( $repoid ); }
+	elsif( $action eq "refresh_abstracts" ) { refresh_abstracts( $repoid ); }
 	elsif( $action eq "redo_thumbnails" ) { redo_thumbnails( $repoid ); }
 	elsif( $action eq "upgrade" ) { upgrade( $repoid ); }
 	elsif( $action eq "test" ) { test( $repoid ); }
@@ -929,6 +934,34 @@ sub redo_thumbnails
 }	
 
 
+
+sub refresh_abstracts
+{
+	my( $repoid ) = @_;
+
+	my $session = new EPrints::Session( 1 , $repoid , $noise );
+	exit( 1 ) unless( defined $session );
+	
+	my $file = $session->get_repository->get_conf( "variables_path" )."/abstracts.timestamp";
+	unless( open( CHANGEDFILE, ">$file" ) )
+	{
+		EPrints::abort( "Cannot write to file $file" );
+	}
+	print CHANGEDFILE "This file last poked at: ".EPrints::Time::human_time()."\n";
+	close CHANGEDFILE;
+	if( $noise > 0 )
+	{
+		print <<END;
+Abstract (Summary) pages will be updated when they are requested. The 
+webserver will now be told to reload the apache configuration, although 
+restarting the server at this point is slightly more efficient.
+
+END
+	}
+	$session->terminate;
+
+	reload( $repoid );
+}	
 
 sub reload
 {
